--- a/app/ui/createNews.module.css
+++ b/app/ui/createNews.module.css
@@ -23,10 +23,13 @@ width: 100%;
 }
 .submitBtn{
     border-radius: 6px;
-    background-color: rgb(107, 107, 217);
+    /* background-color: var(--bg); */
+    background: var(--bg);
+    color: var(--green-100);
     padding: 0.25rem;
     margin-right: 1rem;
     margin-left: auto;
+    width: 10rem;
 }
 .closeBtn{
   position: absolute;
@@ -34,4 +37,7 @@ width: 100%;
   height: 2rem;
   right: 0rem;
   top: 0.25rem;
-}
+} 
+.btnDisabled{
+    background: rgb(180, 180, 221);
+  }
